<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mad.inclass2b.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextLength1"
        android:hint="@string/enter_length"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextLength2"
        android:hint="@string/enter_length"
        android:layout_below="@+id/editTextLength1"
        android:layout_alignLeft="@+id/editTextLength1"
        android:layout_alignStart="@+id/editTextLength1"
        android:layout_alignRight="@+id/editTextLength1"
        android:layout_alignEnd="@+id/editTextLength1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/area"
        android:id="@+id/txtArea"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/length_one"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/editTextLength1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/length_two"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/editTextLength2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtAreaValue"
        android:layout_alignTop="@+id/txtArea"
        android:layout_alignLeft="@+id/editTextLength2"
        android:layout_alignStart="@+id/editTextLength2"
        android:layout_alignRight="@+id/editTextLength2"
        android:layout_alignEnd="@+id/editTextLength2" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtArea"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:id="@+id/rdGroupArea">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triangle"
            android:id="@+id/rdBtnTriangleArea"
            android:textSize="20sp"
            android:layout_marginBottom="25sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/square"
            android:id="@+id/rdBtnSquareArea"
            android:textSize="20sp"
            android:layout_marginBottom="25sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/circle"
            android:id="@+id/rdBtnCircleArea"
            android:textSize="20sp"
            android:layout_marginBottom="25sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rectangle"
            android:id="@+id/rdBtnRectangleArea"
            android:textSize="20sp"
            android:layout_marginBottom="25sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_all"
            android:id="@+id/rdBtnClearAll"
            android:textSize="20sp"
            android:layout_marginBottom="5sp" />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:id="@+id/btnCalculate"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:onClick="onClickCalculate"/>

</RelativeLayout>
